# crawler-to-dash

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mongo_backup.sh  pyproject.toml  test.py
scripts/: clean_sapo.py  consolidate_draft.py  dash_data.py  dash_data_local.py  duplicated_id_json.py  insert_consolidated.py  populate_db.py
src/: consolidate.py  crawl_imovirtual.py  crawl_sapo.py  schemas.py  settings.py
src/cleaners/: default_cleaner.py  sapo_cleaner.py
src/cleaners/notebooks/: imovirtual.ipynb  sapo.ipynb
src/config/: settings.py
src/core/: mongodb.py  s3_client.py  settings.py
src/crawler/: default_crawler.py  imo_crawler.py  imovirtual_crawler.py
src/crawlers/: default_crawler.py  imovirtual_crawler.py  sapo_crawler.py
src/dash/: _components.py  components.py  data.py  main.py
src/dash/components/: app.py
src/dash/components/body/: body.py  heatmap.py  scatter.py  table.py  treemap.py
src/dash/components/head/: head.py
src/dash/components/utils/: card.py
src/data_workflow/: consolidate.py  dash_etl.py  main.py
src/data_workflow/crawler/: default_crawler.py  imovirtual_crawler.py
src/database/: mongodb.py  mongodb_consolidated.py
src/ingestion/: consolidate.py  dash_etl.py  main.py
src/ingestion/crawler/: default_crawler.py  imovirtual_crawler.py
src/tools/: mongodb.py
tests/: conftest.py  test_consolidation.py
