[tool.poetry]
name = "crawler-to-dash"
version = "0.1.0"
description = ""
authors = ["lealre <renaanvp@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.12.3"
bs4 = "^0.0.2"
fastparquet = "^2024.5.0"
pymongo = "^4.8.0"
pydantic-settings = "^2.3.4"
httpx = "^0.27.0"
asyncio = "^3.4.3"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
taskipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.taskipy.tasks]
sapo = 'python src/crawlers/sapo_crawler.py'
imovirtual = 'python src/crawlers/imovirtual_crawler.py'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
