[tool.poetry]
name = "crawler-to-dash"
version = "0.1.0"
description = ""
authors = ["lealre <renaanvp@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "3.12.*"
pymongo = "^4.8.0"
pydantic-settings = "^2.3.4"


[tool.poetry.group.ingestion.dependencies]
httpx = "^0.27.0"
asyncio = "^3.4.3"
requests = "^2.32.3"
boto3 = "^1.35.19"
bs4 = "^0.0.2"
fastparquet = "^2024.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
taskipy = "^1.13.0"
pytest = "^8.3.2"
ipykernel = "^6.29.5"
notebook = "^7.2.2"


[tool.poetry.group.dash.dependencies]
dash = "^2.18.0"
dash-bootstrap-components = "^1.6.0"
plotly = "^5.24.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 79


[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[tool.ruff.format]
preview = true
quote-style = "single"


[tool.taskipy.tasks]
crawl = 'python src/ingestion/crawler/imovirtual_crawler.py'
consolidate = 'python src/ingestion/consolidate.py'
dash_data = 'python src/ingestion/dash_etl.py'
crawl_to_dash = 'python src/ingestion/main.py'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
